@@ -1,3 +1,8 @@
+Thu Nov 21 13:40:20 2013  Zachary Scott  <e@zzak.io>
+
+	* lib/observer.rb: [DOC] Clarify default observer method.
+	  By @edward [Fixes GH-450] https://github.com/ruby/ruby/pull/450
+
 Thu Nov 21 13:32:53 2013  Zachary Scott  <e@zzak.io>
 
 	* ext/openssl/ossl_engine.c: [DOC] Documentation for OpenSSL::Engine
